test/corpus/attributes.txt
=================
Simple attributes
=================

img src="1.png"

---

(source_file
  (element
    name: (tag_name)
    attrs: (attrs
      (attr
        name: (attr_name)
        assignment: (attr_assignment)
        value: (attr_value)))))

===============
Ruby attributes
===============

span title=generate_title("example title") data = { a: 10, b: [20, 30] }

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr (attr_name) (attr_assignment) (attr_value (ruby_expr)))
      (attr (attr_name) (attr_assignment) (attr_value (ruby_expr))))))

===========================
Ruby attributes - multiline
===========================

span title=make_title(style: :standard,
  prefix: "First page -" \
          " my site")

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr (attr_name) (attr_assignment) (attr_value (ruby_expr))))))

===========================
Ruby attributes - delimited
===========================

span(title = Title::Generator.generate(type: :simple) data-visible = "yes")

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr (attr_name) (attr_assignment) (attr_value (ruby_expr)))
      (attr (attr_name) (attr_assignment) (attr_value)))))

=================================================
Ruby attributes - delimited - ends with delimiter
=================================================

span[title=make_title]

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr (attr_name) (attr_assignment) (attr_value (ruby_expr))))))

====================================
String attributes - multiline quoted
====================================

span title="example example
   example

   example {"example"{1}}
   example" lang="en"

---

(source_file
  (element
    (tag_name)
    (attrs
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value))
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value)))))

=================================
String attributes - without space
=================================

a href="/"title="root"

-----

(source_file
  (element
    (tag_name)
    (attrs
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value))
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value)))))

=======================================
String attributes - delimited multiline
=======================================

a[
  href="/"
]

-----

(source_file
  (element
    (tag_name)
    (attrs
      (attr
        (attr_name)
        (attr_assignment)
        (attr_value)))))

================================
Splat attributes - non-delimited
================================

a *attrs

-----

(source_file
  (element
    (tag_name)
    (attrs
      (attr
        (attr_splat)))))

============================
Splat attributes - delimited
============================

a[*attrs]

-----

(source_file
  (element
    (tag_name)
    (attrs
      (attr
        (attr_splat (ruby_expr))))))

==================
Boolean attributes
==================

button[disabled]

-----

(source_file
  (element
    (tag_name)
    (attrs
      (attr
        (attr_boolean
          (attr_name))))))
