test/corpus/nesting.txt
===============
Element nesting
===============

.foo
  .bar
  .baz
.quux

---

(source_file
  (element
    attr_shortcuts: (attr_shortcuts (attr_shortcut_class (css_identifier)))
    (nested
      (element
        attr_shortcuts: (attr_shortcuts (attr_shortcut_class (css_identifier))))
      (element
        attr_shortcuts: (attr_shortcuts (attr_shortcut_class (css_identifier))))))
  (element
    attr_shortcuts: (attr_shortcuts (attr_shortcut_class (css_identifier)))))

===================
Element nesting (2)
===================

span
  span

---

(source_file
  (element
    (tag_name)
    (nested
      (element
        (tag_name)))))

================================
Element nesting with empty lines
================================

p

  b

---

(source_file
  (element
    (tag_name)
    (nested
      (element
        (tag_name)))))

==========
Empty file
==========
---

(source_file)

==============================
Empty file with one empty line
==============================

---

(source_file)
