test/corpus/ruby_block.txt
==========
Ruby block
==========

- items = [ \
    :item1,
    :item2,
  ]

---

(source_file
  (ruby_block_control
    (ruby)))

=============================
Ruby block with nested blocks
=============================

- unless valid?
  .error
    = error_message

---

(source_file
  (ruby_block_control
    (ruby)
    (nested
      (element
        (attr_shortcuts
          (shortcut_class (css_identifier)))
        (nested
          (ruby_block_output
            (ruby)))))))

==========================
Ruby block - nested blocks
==========================

- cache things do
  - things.each do |thing|
    .thing

---

(source_file
  (ruby_block_control
    (ruby)
    (nested
      (ruby_block_control
        (ruby)
        (nested
          (element
            (attr_shortcuts
              (shortcut_class
                (css_identifier)))))))))
